# plot-mcp

./: README.md  pyproject.toml
examples/: local_image_format.py
plot_mcp/: main.py  models.py  renderer.py
